# ditto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  debug.typ  example-new.typ  example.html  example.md  example.typ  gfm-fixture.md  gfm-fixture.typ  html-test-local.md  html-test-local.typ  install.sh  math-test-release.typ  math-test.md  mini.typ  special_out.typ  test-new.typ  test-release.typ  test.html  test.md  test.typ
.pi/: settings.json
docs/: architecture.md  known-limitations.md  todo.md
src/: cli.rs  doctor.rs  highlighter.rs  html.rs  lib.rs  main.rs  renderer.rs
tests/: image_pipeline.rs  integration_md_to_typst.rs  pdf_smoke.rs  typst_snapshots.rs  unit_renderer.rs
tests/fixtures/samples/: basic.md  code_blocks.md  comprehensive_gfm.md  edge_cases.md  edge_cases_extended.md  example.md  footnotes.md  gfm-fixture.md  html-test.md  math.md  mixed_content.md  regression.md  special_chars.md  tables.md  toc.md
tests/fixtures/snapshots/: autolink_angle_bracket.typ  autolink_bare_url.typ  autolink_email.typ  blockquote.typ  blockquote_with_formatting.typ  bold_italic.typ  bullet_list.typ  code_block_bash.typ  code_block_javascript.typ  code_block_no_lang.typ  code_block_python.typ  code_block_sql.typ  code_block_typescript.typ  comprehensive_gfm.typ  definition_list_complex.typ  definition_list_multi.typ  definition_list_terms.typ  description_list.typ  display_math.typ  footnote.typ  footnote_ordering.typ  gfm_fixture.typ  heading_hierarchy.typ  inline_html_strong.typ  inline_math.typ  inline_math_in_table.typ  link.typ  math_aligned.typ  math_blackboard_bold.typ  math_greek.typ  math_greek_full.typ  math_integral_limits.typ  math_matrix.typ  math_operators.typ  math_sum_limits.typ  math_vmatrix.typ  missing_image.typ  (+21 more)
