[package]
name = "md-to-pdf"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to convert Markdown (including GitHub Flavored Markdown) to PDF"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comrak = { version = "0.39", default-features = false }
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = ["fonts", "embed-fonts"] }
typst-pdf = "0.14.2"
typst-syntax = "0.14.2"
ureq = "2.12"

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "md-to-pdf"
path = "src/main.rs"
