[package]
name = "ditto"
version = "0.1.0"
edition = "2024"
description = "A fast, pure-Rust CLI that converts Markdown (CommonMark + GitHub Flavored Markdown) to PDF via the Typst engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/joemccann/ditto"
keywords = ["markdown", "pdf", "typst", "gfm", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comrak = { version = "0.39", default-features = false }
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = ["fonts", "embed-fonts"] }
typst-pdf = "0.14.2"
typst-syntax = "0.14.2"
ureq = "2.12"

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "ditto"
path = "src/main.rs"

[lib]
name = "ditto"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
